# tensor-compiler-gpu

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeCache.txt  Makefile  Reduce.cu  affine_transform.cu  cmake_install.cmake  cuda_kernel_utils.h  cuda_utils.h  normalize.cu  setup.py  sobel.cu  test_centernet_post.cpp  test_transform_preds.py  transform_preds_wrapper.cpp  transform_preds_wrapper.hpp  utils.h
src/MPI/: hello.c  hellp  summarize_mpi  summarize_mpu.c
src/block_sync/: compile.sh  test_atomic_add  test_atomic_add.cu  test_atomic_add.ptx  test_atomic_add.sass  test_atomic_add_sass_v1.sass  test_atomic_add_sass_v2.sass  test_atomic_add_volatile1.ptx  test_atomic_add_volatile2.ptx
src/intel/: matmul_avx512  matmul_avx512.cpp  test_dlboost  test_dlboost.cpp
src/learn_cuda/: Add.cu  Makefile  Reduce.cu  bytedance.cpp  cudaTensorCoreGemm.cu  cudnn_conv.cu  debug_gpt2_attn_fc.cu  debug_gpt2_qkv.cu  learn_cutlass.cu  learn_inherence.cpp  learn_namepace  learn_namespace.cpp  learn_namespace.h  learn_shuffle.cu  learn_shuffle.fatbin.c  learn_sync.cu  learn_vector_load.cu  opt_conv_tensorcore.cu  opt_matmul_tensorcore  opt_matmul_tensorcore.cu  pointwise_conv.cu  reduce_using_reg.cu  sobel.cu  test  test.cpp  test.py  test_mps.cu  test_torch.cpp  vector_load_half8.cu
src/lstm/: Makefile  lstm.py  lstm_cpu.cpp  lstm_main.cu  lstm_reuse_shared_memory.h  lstm_utils.h  lstm_wavefront_magic.cu  seq2seq.cu  test_atomic_add.cu
src/lstm/lstm_polly/: lstm_naive.ast
src/operator_fusion/: format_student.py  fused_depthwise_pointwise_conv.cpp  fused_depthwise_pointwise_conv.cu  fused_pointwise_pointwise.cu  fused_pw_dw_conv.cpp  fused_pw_dw_conv.cu  ncu-metrics.sh  read_clock.py  torch_utils.cpp  torch_utils.h
src/operator_fusion/bert/: Makefile  bert_attn.cu  bert_attn_qkv_transpose.cu  bert_base_impl.cu  bert_binding.cu  bert_feed_forward  bert_feed_forward.cu  bert_fused_fc_fc.h  bert_query_key  bert_query_key.cu  bert_query_key_matmul_softmax.h  build_and_run.sh  default_kernel.cu  example.cu  read_clock.py  read_no_instruction.py  rename_thread_binding.py  setup.py  test_bert.py  torch_bert_attn.cu  torch_bert_attn_sqq.cu  torch_bert_attn_sqq_bk.cu  torch_bert_global_sync.cu  torch_reduce.cu  torch_utils.cpp
src/operator_fusion/efficientnet/: Makefile  build_fused_pointwise.sh  depthwise_56_56_144_3_3_s11.cu  efficientnet_se_module_binding.cu  efficientnet_se_module_main.cu  efficientnet_se_module_unittest.cu  fused_micro_operators.cu  fused_micro_operators.h  fused_micro_operators_main  fused_micro_operators_main.cu  fused_pointwise_depthwise.cu  fused_pointwise_depthwise.h  fused_pointwise_depthwise_main  fused_pointwise_depthwise_main.cu  fused_pointwise_pointwise  fused_pointwise_pointwise.cu  fused_pointwise_pointwise.h  fused_pointwise_pointwise_main  fused_pointwise_pointwise_main.cu  load_model.cc  pointwise_112_112_144_6.cu  pointwise_112_112_6_114.cu  pointwise_112_112_6_144.cu  pointwise_56_56_24_144.cu  run_all_se.py  run_ncu_profile.sh  se_module.cu  se_module_fused.cu  se_module_v2.cu  setup.py  test_efficientnet_se_module.py  test_pad.cpp
src/operator_fusion/gpt-2/: build.sh  gpt2-large.h  llama.cu  pytorch_gpt2.py  run_ncu_profile.sh  test_load_tensor.cpp  (+5 more)
src/operator_fusion/lstm/lstm_O2/: BenchmarkFuseLstm100_10_1_256.cc  CMakeLists.txt
src/operator_fusion/lstm/lstm_O2/ictlstm100_10_256_fusedcompute_lib/: generate.py  wave_0.cu  wave_1.cu  wave_10.cu  wave_100.cu  wave_101.cu  wave_102.cu  wave_103.cu  wave_104.cu  wave_105.cu  wave_106.cu  wave_107.cu  wave_108.cu  wave_109.cu  wave_11.cu  wave_12.cu  wave_13.cu  wave_14.cu  wave_15.cu  wave_16.cu  wave_17.cu  wave_18.cu  wave_19.cu  wave_2.cu  wave_20.cu  wave_21.cu  wave_22.cu  wave_23.cu  wave_24.cu  wave_25.cu  wave_26.cu  wave_27.cu  wave_28.cu  wave_29.cu  wave_3.cu  wave_30.cu  wave_31.cu  wave_32.cu  wave_33.cu  wave_34.cu  (+71 more)
src/operator_fusion/lstm/lstm_O2/ictlstm100_10_256_naivefuse_fusedsolve_fusedcompute_adduw_float4_lib/: generate.py  wave_0.cu  wave_1.cu  wave_10.cu  wave_100.cu  wave_101.cu  wave_102.cu  wave_103.cu  wave_104.cu  wave_105.cu  wave_106.cu  wave_107.cu  wave_108.cu  wave_11.cu  wave_12.cu  wave_13.cu  wave_14.cu  wave_15.cu  wave_16.cu  wave_17.cu  wave_18.cu  wave_19.cu  wave_2.cu  wave_20.cu  wave_21.cu  wave_22.cu  wave_23.cu  wave_24.cu  wave_25.cu  wave_26.cu  wave_27.cu  wave_28.cu  wave_29.cu  wave_3.cu  wave_30.cu  wave_31.cu  wave_32.cu  wave_33.cu  wave_34.cu  wave_35.cu  (+70 more)
src/operator_fusion/lstm/lstm_O2/include/: lstmlib.cuh
src/operator_fusion/lstm/lstm_O2/lstm_cell_net_100_10/: LSTM100_10.h
src/operator_fusion/lstm/lstm_O2/utils/: test_utils.h
src/polly_operator_fusion/: generate_polly.sh  maxpool___%.preheader12---%24.jscop  stencil2d___%.preheader3---%20.jscop
src/transform_preds/: CMakeLists.txt  __init__.py  make.sh  setup.py  transform_preds.py
src/transform_preds/src/: affine_transform.hpp  affine_transform_cuda.cu  affine_transform_cuda.hpp  cv_types.hpp  get_affine_transform.cu  get_affine_transform_cpu.cpp  get_affine_transform_cuda.cu  print_cuda.cu  print_cuda.hpp  test_centernet_post_cuda.cpp  transform_preds.cpp  transform_preds.h  transform_preds_cuda.cpp  transform_preds_wrapper.cpp  transform_preds_wrapper_cuda.cpp  transform_preds_wrapper_cuda.hpp
src/transform_preds/src/cpu/: get_affine_transform_cpu.cpp  get_affine_transform_cpu.hpp  get_affine_transform_cpu_torch_wrapper.cpp  get_affine_transform_cpu_torch_wrapper.hpp
src/transform_preds/src/cuda/: affine_transform_cuda.cu  affine_transform_cuda.hpp  affine_transform_cuda_torch_wrapper.cpp  affine_transform_cuda_torch_wrapper.hpp  print_cuda.cu  print_cuda.hpp  test_affine_transform_dets_cuda.cpp
src/transform_preds/test/: test_transform_preds.py
src/tvm_codegen/: block_fuse_d2l_matmul_kernel0.cu  fused_matmul.cu  fused_matmul_main.cu  generate_func_params.py  rammer_blockfuse_codegen.cu  resnext_imagenet_conv2.cu  tvmgen_default_fused_concatenate_kernel0.cu  tvmgen_default_fused_concatenate_kernel0.tvm_meta.json  tvmgen_default_fused_nn_conv2d_kernel0.cu
(+182 files in other folders)
