cmake_minimum_required(VERSION 3.5)
set(CUDA_HOME "/usr/local/cuda/")
# set(CMAKE_C_COMPILER "${CUDA_HOME}/bin//nvcc")
# set(CMAKE_CXX_COMPILER "${CUDA_HOME}/bin/nvcc")
set(CMAKE_CUDA_COMPILER "${CUDA_HOME}/bin/nvcc")
set(CMAKE_CUDA_ARCHITECTURES "86")
set(CUDA_ARCHITECTURES 86)
project(tensor-compiler-gpu LANGUAGES C CXX CUDA)
include(CheckLanguage)
# check_language(CUDA)

# Declare variables

set(CUDA_LIB "${CUDA_HOME}/lib64")

set(CUDA_SEPARABLE_COMPILATION ON)

set(TORCH_HOME "/home/xiachunwei/anaconda3/lib/python3.8/site-packages/torch" CACHE STRING "Set pytorch path")
# set(TORCH_HOME "/usr/local/lib/miniconda3/envs/cloud-ai-lab/lib/python3.8/site-packages/torch" CACHE STRING "Set pytorch path")
# set(CUTLASS_HOME "/home2/xiachunwei/Software/cutlass/")


message(${CUDA_LIB})
message(${TORCH_HOME})
find_package(CUDA REQUIRED)

# Include directories
include_directories("/usr/local/cuda-11.7/include")
include_directories("/usr/local/cuda-11.7/targets/x86_64-linux/include")
include_directories("${TORCH_HOME}/include")
include_directories("${TORCH_HOME}/include/torch/csrc/api/include")
include_directories("third_party/libnpy/include")
include_directories("${CUTLASS_HOME}/include" "${CUTLASS_HOME}/tools/util/include/" "${CUTLASS_HOME}/examples/common/")
link_directories("${CUTLASS_HOME}/build/tools/library")

link_directories(${CUDA_LIB})
link_directories("${TORCH_HOME}/lib")
link_directories("${TORCH_HOME}/lib/" ${CUDA_LIB})

# if(${CMAKE_BUILD_TYPE} EQUAL "Debug")
#   message(INFO "Build with debug option")
#   add_compile_options("-g -G -O0")
# endif()
# set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS};-G;")
# add_compile_options(-fno-stack-protector)

add_executable(learn_sync src/learn_cuda/learn_sync.cu)
add_executable(reduce_using_reg src/learn_cuda/reduce_using_reg.cu)
add_executable(add src/learn_cuda/Add.cu)
add_executable(reduce src/learn_cuda/Reduce.cu)
add_executable(normalize src/learn_cuda/normalize.cu)
add_executable(sobel src/learn_cuda/sobel.cu)
add_executable(cudnn_conv src/learn_cuda/cudnn_conv.cu)
add_executable(pointwise_conv src/learn_cuda/pointwise_conv.cu)
add_executable(learn_shuffle src/learn_cuda/learn_shuffle.cu)
# add_executable(learn_cutlass src/learn_cuda/learn_cutlass.cu)
# file(GLOB FUSE_SRC_FILES src/operator_fusion/efficientnet/*.cu)

# Declare executables
# EfficientNet
set(EFFICIENT_NET_PATH "src/operator_fusion/efficientnet/")
add_executable(fused_pointwise_pointwise_main ${EFFICIENT_NET_PATH}/fused_pointwise_pointwise_main.cu)
add_executable(fused_pointwise_depthwise_main ${EFFICIENT_NET_PATH}/fused_pointwise_depthwise_main.cu)
add_executable(fused_micro_operators_main ${EFFICIENT_NET_PATH}/fused_micro_operators_main.cu)
add_executable(load_torch_model src/operator_fusion/load_torch_model.cc)
add_executable(efficientnet_se_module_main src/operator_fusion/efficientnet/efficientnet_se_module_main.cu)
add_executable(efficientnet_se_module_unittest src/operator_fusion/efficientnet/efficientnet_se_module_unittest.cu)
# Transformer
add_executable(cudnn_infer_ops src/operator_fusion/transformer/cudnn_infer_ops.cu)
add_executable(swin_transformer_mlp src/operator_fusion/transformer/swin_transformer_mlp_main.cu)
add_executable(gemm_spy src/operator_fusion/transformer/gemm_spy.cu)
add_executable(transformer_query_key_softmax_main src/operator_fusion/transformer/transformer_query_key_softmax_main.cu)
add_executable(swin_transformer_query_key_softmax_main src/operator_fusion/transformer/swin_transformer_query_key_softmax_main.cu)
# Nerf
add_executable(nerf src/operator_fusion/nerf/nerf.cu)
add_executable(tvm_nerf src/operator_fusion/nerf/tvm_nerf.cu)
# add_executable(cutlass_nerf src/operator_fusion/nerf/cutlass_nerf.cu)
# target_link_libraries(cutlass_nerf cutlass)
# target_link_libraries(learn_cutlass cutlass)
# Bert
add_executable(bert_feed_forward src/operator_fusion/bert/bert_feed_forward.cu)
add_executable(bert_query_key src/operator_fusion/bert/bert_query_key.cu)
add_executable(torch_bert_attn src/operator_fusion/bert/torch_bert_attn.cu)
add_executable(torch_bert_attn_sqq src/operator_fusion/bert/torch_bert_attn_sqq.cu)
add_executable(torch_bert_global_sync src/operator_fusion/bert/torch_bert_global_sync.cu)
add_executable(torch_reduce src/operator_fusion/bert/torch_reduce.cu)
add_library(bert_kernels STATIC src/operator_fusion/bert/kernels/gemm.cu)
# Resnext
add_executable(torch_resnext src/operator_fusion/resnext/torch_resnext.cu)
# SwinTransformer
add_executable(swin_fused_feed_forward src/operator_fusion/swin_transformer/torch_swin_fused_feed_forward.cu)
# GPT2
add_executable(test_load_tensor src/operator_fusion/gpt-2/test_load_tensor.cpp)
add_executable(torch_gpt src/operator_fusion/gpt-2/torch_gpt.cu)
add_executable(vector_matrix_mul_main src/operator_fusion/gpt-2/vector_matrix_mul_main.cu)
add_executable(torch_gpt2_class src/operator_fusion/gpt-2/torch_gpt2_class.cu)
# LSTM
# set_target_properties(lstm_wavefront_magic PROPERTIES CUDA_ARCHITECTURES "70;75;80")
add_executable(lstm_main src/operator_fusion/lstm/lstm_main.cu)
add_executable(seq2seq src/operator_fusion/lstm/seq2seq.cu)
add_executable(lstm_cpu src/operator_fusion/lstm/lstm_cpu.cpp)

file(GLOB BERT_KERNELS src/operator_fusion/bert/kernels/*.cu)
add_library(torch_utils SHARED src/operator_fusion/torch_utils.cpp)

# BlockSync
add_executable(test_atomic_add src/block_sync/test_atomic_add.cu)

# add_library(bert_kernels STATIC ${BERT_KERNELS})
# add_library(gemm_add_qkv_bias src/operator_fusion/bert/kernels/gemm_add_qkv_bias.cu)
# add_library(gemm_k2 src/operator_fusion/bert/kernels/gemm_k2.cu)
# add_library(gemm_k6 src/operator_fusion/bert/kernels/gemm_k6.cu)
# add_library(gemm_reshape src/operator_fusion/bert/kernels/gemm_reshape.cu)
# add_library(fused_sqq_bert src/operator_fusion/bert/kernels/fused_sqq_bert.cu)

# add_executable(fused_pointwise_pointwise_conv src/operator_fusion/efficientnet/fused_pointwise_pointwise_main.cu src/operator_fusion/efficientnet/pointwise_112_112_144_6.cu)
# add_executable(fused_pointwise_pointwise_conv ${FUSE_SRC_FILES})
# add_executable(tvmgen src/tvm_codegen/fused_matmul_main.cu src/tvm_codegen/block_fuse_d2l_matmul_kernel0 /tmp/mmult_kernel0.cu)
# add_executable(lstm_wavefront_timesteps src/operator_fusion/lstm/lstm_wavefront_timesteps.cu)


add_executable(cu_fused_pw_dw_conv src/operator_fusion/fused_depthwise_pointwise_conv.cu)

target_link_libraries(cudnn_conv cudnn)
target_link_libraries(cudnn_infer_ops cudnn cuda cublas)
target_link_libraries(tvm_nerf cudnn cuda cublas)


set(CMAKE_CUDA_FLAGS_DEBUG "-g -G -gencode arch=compute_86,code=sm_86")
set_target_properties(torch_utils PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
set_target_properties(torch_bert_attn PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
set_target_properties(torch_bert_attn_sqq PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
set_target_properties(torch_gpt PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
set_target_properties(torch_gpt2_class PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
set_target_properties(vector_matrix_mul_main PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
set_target_properties(torch_bert_global_sync PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
set_target_properties(torch_resnext PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
set_target_properties(torch_reduce PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
set_target_properties(bert_kernels PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
set_target_properties(swin_fused_feed_forward PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
set_target_properties(efficientnet_se_module_main PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
set_target_properties(efficientnet_se_module_unittest PROPERTIES CUDA_SEPARABLE_COMPILATION ON)

# target_compile_options(torch_bert_attn PRIVATE "$<$<AND:$<CONFIG:Debug>,$<COMPILE_LANGUAGE:CUDA>>:-G;-src-in-ptx>")

if("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
  set(CUDA_OPT "-D_GLIBCXX_USE_CXX11_ABI=0 -g -G -O0")
else()
  set(CUDA_OPT "-D_GLIBCXX_USE_CXX11_ABI=0 -O3")
endif()
message("Build torch_bert_attn with debug option ${CUDA_OPT}")
target_compile_options(torch_utils PUBLIC ${CUDA_OPT})
target_compile_options(torch_bert_attn PUBLIC ${CUDA_OPT})
target_compile_options(torch_bert_attn_sqq PUBLIC ${CUDA_OPT})
target_compile_options(torch_gpt PUBLIC ${CUDA_OPT})
target_compile_options(torch_gpt2_class PUBLIC ${CUDA_OPT})
target_compile_options(vector_matrix_mul_main PUBLIC ${CUDA_OPT})
target_compile_options(torch_bert_global_sync PUBLIC ${CUDA_OPT})
target_compile_options(torch_resnext PUBLIC ${CUDA_OPT} )
target_compile_options(torch_reduce PUBLIC ${CUDA_OPT})
target_compile_options(torch_resnext PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:--maxrregcount 196>) 
target_compile_options(swin_fused_feed_forward PUBLIC ${CUDA_OPT})
target_compile_options(efficientnet_se_module_main PUBLIC ${CUDA_OPT})
target_compile_options(efficientnet_se_module_unittest PUBLIC ${CUDA_OPT})


# target_link_options()
target_link_directories(torch_resnext PUBLIC ${CUDA_LIB})
target_link_directories(torch_bert_attn_sqq PUBLIC ${CUDA_LIB})
target_link_directories(torch_gpt PUBLIC ${CUDA_LIB})
target_link_directories(torch_gpt2_class PUBLIC ${CUDA_LIB})
target_link_directories(vector_matrix_mul_main PUBLIC ${CUDA_LIB})
target_link_directories(torch_bert_global_sync PUBLIC ${CUDA_LIB})

target_link_options(torch_resnext PUBLIC "-L${CUDA_LIB}")
target_link_options(torch_bert_attn_sqq PUBLIC "-L${CUDA_LIB}")
target_link_options(torch_gpt PUBLIC "-L${CUDA_LIB}")
target_link_options(torch_gpt2_class PUBLIC "-L${CUDA_LIB}")
target_link_options(vector_matrix_mul_main PUBLIC "-L${CUDA_LIB}")
target_link_options(torch_bert_global_sync PUBLIC "-L${CUDA_LIB}")
target_link_options(torch_reduce PUBLIC "-L${CUDA_LIB}")
target_link_options(torch_bert_attn PUBLIC "-L${CUDA_LIB}")
target_link_options(swin_fused_feed_forward PUBLIC "-L${CUDA_LIB}")
target_link_options(efficientnet_se_module_main PUBLIC "-L${CUDA_LIB}")
target_link_options(efficientnet_se_module_unittest PUBLIC "-L${CUDA_LIB}")
target_link_libraries(torch_bert_attn cublasLt cublas torch torch_cuda c10 c10_cuda torch_python  torch_cpu torch_utils)
target_link_libraries(torch_bert_attn_sqq cublasLt cublas torch torch_cuda c10 c10_cuda torch_python  torch_cpu torch_utils)
target_link_libraries(torch_gpt cublasLt cublas torch torch_cuda c10 c10_cuda torch_python  torch_cpu torch_utils)
target_link_libraries(torch_gpt2_class cublasLt cublas torch torch_cuda c10 c10_cuda torch_python  torch_cpu torch_utils)
target_link_libraries(vector_matrix_mul_main cublasLt cublas torch torch_cuda c10 c10_cuda torch_python  torch_cpu torch_utils)
target_link_libraries(torch_bert_global_sync cublasLt cublas torch torch_cuda c10 c10_cuda torch_python  torch_cpu torch_utils)
target_link_libraries(torch_resnext  torch torch_cuda c10 c10_cuda torch_python  torch_cpu torch_utils cublasLt cublas)
target_link_libraries(torch_reduce cublasLt cublas torch torch_cuda c10 c10_cuda torch_python  torch_cpu torch_utils)
target_link_libraries(swin_fused_feed_forward cublasLt cublas torch torch_cuda c10 c10_cuda torch_python  torch_cpu torch_utils)
target_link_libraries(efficientnet_se_module_main cublasLt cublas torch torch_cuda c10 c10_cuda torch_python  torch_cpu torch_utils)
target_link_libraries(load_torch_model torch torch_cuda c10 c10_cuda torch_python  torch_cpu torch_utils)
target_link_libraries(efficientnet_se_module_unittest torch torch_cuda c10 c10_cuda torch_python  torch_cpu torch_utils)
target_link_libraries(test_load_tensor torch torch_cuda c10 c10_cuda torch_python  torch_cpu torch_utils)
